# lingua-server

./: .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  RESULTS.md  benchmark.sh  devenv.nix
.github/workflows/: docker-publish.yml
src/: lib.rs  main.rs
tests/: integration_tests.rs
