[package]
name = "lingua-service"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lingua = { version = "1.7.2", default-features = false, features = ["english", "french", "german", "spanish"] }
rayon = "1"
